--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
+  <dependencies>
+  	<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1.1</version>
+  	</dependency> 
+  </dependencies>
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>JavaFX</groupId>
   <artifactId>JavaFX</artifactId>
